objects/GiftDesignation.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Code__c</fullName>
        <defaultValue>&quot;4100 - Program Donations&quot;</defaultValue>
        <label>GL Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NGOTV_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program</referenceTo>
        <relationshipLabel>Gift Designations</relationshipLabel>
        <relationshipName>Gift_Designations</relationshipName>
        <type>Lookup</type>
    </fields>
    <sharingModel>Private</sharingModel>
</CustomObject>